--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,8 +8,16 @@
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "app/main.py"
     }
-  ]
+  ],
+  "env": {
+    "PYTHONPATH": ".",
+    "MAX_WORKERS": "1"
+  }
 }
